<resources>
    <string name="app_name">Shaadi</string>
    <string name="header">My Profile</string>
    <string name="full_name">Name</string>
    <string name="title">Title</string>
    <string name="age">Age</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="gender">Gender</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="you_decline">You Declined</string>
    <string name="you_accept">You Accepted</string>
    <string name="no_internet">Make sure you have a working internet connection.</string>
    <string name="no_data">No Profile Data Available.\n Please connect to internet.</string>
</resources>