<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <ImageView
            android:id="@+id/ivUserImage"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/header"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView1"
            style="@style/TextViewStyle"
            android:text="@string/full_name"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvName"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/montserrat_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView1"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textview2"
            style="@style/TextViewStyle"
            android:text="@string/age"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvAge"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

        <TextView
            android:id="@+id/tvAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/montserrat_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textview2"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <TextView
            android:id="@+id/textView3"
            style="@style/TextViewStyle"
            android:text="@string/gender"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvGender"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/tvAge" />

        <TextView
            android:id="@+id/textView4"
            style="@style/TextViewStyle"
            android:layout_marginTop="16dp"
            android:text="@string/city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivUserImage" />

        <Button
            android:id="@+id/btn_decline"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_red_button"
            android:text="@string/decline"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/btn_accept"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/btn_accept"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_green_button"
            android:text="@string/accept"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_decline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_decline" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/montserrat_regular"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
            app:layout_constraintStart_toEndOf="@+id/textView9" />

        <TextView
            android:id="@+id/tvCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/montserrat_regular"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView5"
            style="@style/TextViewStyle"
            android:layout_marginTop="8dp"
            android:text="@string/country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/tvCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/montserrat_regular"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView5" />

        <TextView
            android:id="@+id/text_accept"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/you_accept"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_decline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/text_decline" />

        <TextView
            android:id="@+id/text_decline"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/you_decline"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/text_accept"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView9"
            style="@style/TextViewStyle"
            android:layout_marginTop="16dp"
            android:text="@string/title"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>